tests/semantic/comp_params_inheritance/comp_params_inheritance.err
Error: Component T not found in file comp_params_inheritance.dl at line 8
    .init impl = T
-----------------^-
1 errors generated, evaluation aborted
